Added confirm payment endpoints
